--- a/100_Numpy_exercises_ch.ipynb
+++ b/100_Numpy_exercises_ch.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -266,15 +266,14 @@
        "(array([0, 1, 4]),)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nz = np.nonzero([1,2,0,0,4,0])\n",
-    "nz\n",
-    "# fix this "
+    "nz"
    ]
   },
   {
@@ -411,36 +410,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5443162120586253\n"
+      "0.550313509688958\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.50594619, 0.40482236, 0.94787048, 0.88773422, 0.29404562,\n",
-       "       0.47368029, 0.28244964, 0.13234597, 0.55021394, 0.45432672,\n",
-       "       0.81882666, 0.54022655, 0.78328362, 0.31342197, 0.25897783,\n",
-       "       0.71044885, 0.99721565, 0.97306498, 0.4043562 , 0.43768319,\n",
-       "       0.76455958, 0.37757777, 0.30083584, 0.19151871, 0.98316147,\n",
-       "       0.47661387, 0.94875634, 0.58974189, 0.49627519, 0.02950479])"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "t = np.random.random(30)\n",
-    "print(t.mean())\n",
-    "t"
+    "print(t.mean())"
    ]
   },
   {
@@ -490,10 +473,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 1., 1., 1., 1., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.ones((5,5))\n",
+    "b = np.pad(b, pad_width=1, mode='constant', constant_values=0)\n",
+    "b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -518,10 +522,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "False\n",
+      "False\n",
+      "nan\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0 * np.nan)\n",
+    "print(np.nan == np.nan)\n",
+    "print(np.inf > np.nan)\n",
+    "print(np.nan - np.nan)\n",
+    "print(np.nan in set([np.nan]))\n",
+    "print(0.3 == 3 * 0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -532,10 +556,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [0, 2, 0, 0, 0],\n",
+       "       [0, 0, 3, 0, 0],\n",
+       "       [0, 0, 0, 4, 0]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = np.diag(1 + np.arange(4), k=-1)\n",
+    "m"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -546,10 +588,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = np.zeros((8,8), dtype=int)\n",
+    "m[1::2,::2] = 1\n",
+    "m[::2,1::2] = 1\n",
+    "m"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -560,10 +625,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 5, 3)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unravel_index(99,(6,7,8))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -574,10 +652,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ch = np.tile( np.array([[0,1],[1,0]]), (4,4))\n",
+    "ch"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -588,10 +687,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.19294372,  0.69619024, -0.41446081, -1.49102347, -1.20779829],\n",
+       "       [ 0.12728124, -0.812313  , -0.62294741, -1.42241119, -0.28646258],\n",
+       "       [ 1.19883486,  0.43946669,  0.97921619, -1.37472757,  1.55787487],\n",
+       "       [ 1.34876676, -1.43169259,  0.27657361,  1.07734115, -0.16724004],\n",
+       "       [ 0.57768736, -0.71951387,  1.28717379,  0.41636037,  1.16076742]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = np.random.random((5,5))\n",
+    "r = (r - np.mean (r)) / (np.std (r))\n",
+    "r"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -602,10 +720,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype([('r', 'u1'), ('g', 'u1'), ('b', 'u1'), ('a', 'u1')])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "color = np.dtype([(\"r\", np.ubyte, 1),\n",
+    "                  (\"g\", np.ubyte, 1),\n",
+    "                  (\"b\", np.ubyte, 1),\n",
+    "                  (\"a\", np.ubyte, 1)])\n",
+    "\n",
+    "color"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -616,10 +752,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 3],\n",
+       "       [3, 3],\n",
+       "       [3, 3],\n",
+       "       [3, 3],\n",
+       "       [3, 3]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = np.ones((5,3), dtype=int) @ np.ones((3,2), dtype=int)\n",
+    "m"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -630,10 +784,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3, -4, -5, -6, -7, -8,  9, 10])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = np.arange(11)\n",
+    "n[(3 < n) & (n <= 8)] *= -1\n",
+    "n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -657,10 +826,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(range(5),-1))\n",
+    "from numpy import *\n",
+    "print(sum(range(5),-1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -710,10 +892,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "0\n",
+      "[-9.22337204e+18]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n",
+      "/usr/local/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: RuntimeWarning: divide by zero encountered in floor_divide\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.array(0) / np.array(0))\n",
+    "print(np.array(0) // np.array(0))\n",
+    "print(np.array([np.nan]).astype(int).astype(float))"
+   ]
   },
   {
    "cell_type": "markdown",
